tests/ui/consts/required-consts/interpret-in-promoted.opt.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/interpret-in-promoted.rs:15:28
   |
LL |     let _x: &'static () = &ub();
   |                            ^^^^ entering unreachable code
   |
note: inside `ub`
  --> $DIR/interpret-in-promoted.rs:9:5
   |
LL |     std::hint::unreachable_unchecked();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

note: erroneous constant encountered
  --> $DIR/interpret-in-promoted.rs:15:27
   |
LL |     let _x: &'static () = &ub();
   |                           ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
